MediaPlayer::getSupportedTypes only returns types from the last engine registered https://bugs.webkit.org/show_bug.cgi?id=150669

Reviewed by Jer Noble.

No new tests, fixes existing tests.

* platform/graphics/MediaPlayer.cpp:
(WebCore::MediaPlayer::getSupportedTypes):
(WebCore::MediaPlayer::isAvailable):


Canonical link: https://commits.webkit.org/168840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191734 268f45cc-cd09-0410-ab3c-d52691b4dbfc